# TO_lab1

./: CMakeLists.txt  Currency.hpp  CurrencyExchanger.cpp  CurrencyExchanger.sln  CurrencyExchanger.vcxproj  CurrencyExchanger.vcxproj.filters  Exceptions.hpp  HTTPClient.cpp  HTTPCllient.hpp  IIterator.hpp  Money.cpp  Subject.cpp  XMLParser.cpp  XMLParser.hpp  resource.h
include/app/: AppContext.hpp  CurrencyExchangeApp.hpp  InputValidator.hpp
include/app/menuAction/: ConversionAction.hpp  DisplayCurrenciesAction.hpp  ExitAction.hpp  HandleConversion.hpp  HandleDisplayAvailableCurrencies.hpp  HandleExit.hpp  IHandleMenuAction.hpp  IMenuAction.hpp
include/model/: Currency.hpp  Money.hpp
include/patterns/iterator/: CurrencyIterator.hpp  IIterator.hpp
include/patterns/observer/: IObserver.hpp  Subject.hpp  UIObserver.hpp
include/patterns/states/: ConvertingState.hpp  ErrorState.hpp  IApplicationState.hpp  InitialState.hpp  LoadingState.hpp  ReadyState.hpp
include/patterns/strategies/: DirectConversionStrategy.hpp  IConversionStrategy.hpp  ThroughPLNConversionStrategy.hpp
include/services/: CurrencyConventer.hpp  CurrencyConverter.hpp  HTTPClient.hpp  NBPService.hpp  XMLParser.hpp
include/utils/: Exceptions.hpp  Types.hpp
src/app/: AppContext.cpp  CurrencyExchangeApp.cpp  InputValidator.cpp
src/app/menuAction/: ConversionAction.cpp  DisplayCurrenciesAction.cpp  ExitAction.cpp  HandleConversion.cpp  HandleExit.cpp  (+1 more)
src/model/: Currency.cpp  Money.cpp
src/services/: CurrencyConventer.cpp  CurrencyConverter.cpp  HTTPClient.cpp  NBPService.cpp  XMLParser.cpp
(+10 files in other folders)
